2010-07-02  Jan Djärv  <jan.h.d@swipnet.se>

	* configure.in: Remove define __P.

2010-07-02  Dan Nicolaescu  <dann@ics.uci.edu>

	* configure.in (--enable-use-lisp-union-type): New flag.

2010-06-30  Dan Nicolaescu  <dann@ics.uci.edu>

	Fix CFLAGS for non-GCC compilers.
	* configure.in (CFLAGS): Always use -g like it was done before the
	2010-03-30 change.
	(REAL_CFLAGS): Use CFLAGS for non-GCC to get optimization flags.  (Bug#6538)

2010-06-30  Glenn Morris  <rgm@gnu.org>

	* configure.in (HAVE_SOUND, HAVE_X_I18N, HAVE_X11R6_XIM):
	Set with AC_DEFINE rather than AH_BOTTOM.

	* configure.in (C_OPTIMIZE_SWITCH, CANNOT_DUMP, SYSTEM_MALLOC):
	(USE_MMAP_FOR_BUFFERS, C_WARNING_SWITCH, CFLAGS, REAL_CFLAGS):
	Set with shell, not cpp.
	(LIBX): Remove, just use -lX11 in the one place this was used.
	(cannot_dump): Replace with CANNOT_DUMP.

2010-06-28  Jan Djärv  <jan.h.d@swipnet.se>

	* configure.in: Add --with-x-toolkit=gtk3. Remove HAVE_GTK_MULTIDISPLAY,
	check for gtk_file_chooser_dialog_new, and HAVE_GTK_FILE_BOTH (implied
	by minimum required Gtk+ 2.6).  Add checks for functions introduced
	in Gtk+ 2.14 or newer (bug#6505).

2010-06-26  Eli Zaretskii  <eliz@gnu.org>

	* config.bat: Remove white space around "+" in COPY commands.

2010-06-16  Chong Yidong  <cyd@stupidchicken.com>

	* INSTALL: Update font information (Bug#6389).

2010-06-16  Glenn Morris  <rgm@gnu.org>

	* INSTALL: General update.

2010-06-12  Glenn Morris  <rgm@gnu.org>

	* Makefile.in (install-arch-indep): Delete any old info .gz files
	first.

2010-06-11  Glenn Morris  <rgm@gnu.org>

	* configure.in (--without-compress-info): New option.
	(GZIP_INFO): New output variable.

	* Makefile.in (GZIP_INFO): New, set by configure.
	(install-arch-indep): Don't gzip info pages if GZIP_INFO is nil.
	Handle man pages in the same way.

2010-06-10  Glenn Morris  <rgm@gnu.org>

	* Makefile.in (install-arch-indep): Gzip the info files too.

	* make-dist: Remove references to non-existent directories and files.
