@@ -1,3 +1,7 @@
+2010-07-07  Dan Nicolaescu  <dann@ics.uci.edu>
+
+	* configure.in (getenv): Remove K&R declaration.
+
 2010-07-02  Jan Djärv  <jan.h.d@swipnet.se>
 
 	* configure.in: Remove define __P.
